--- a/1_probability/source/1_probability.tex
+++ b/1_probability/source/1_probability.tex
@@ -34,7 +34,8 @@ the results of user testing.
 Imaging a gambler wants to decide if a coin is fair; imagine they toss
 it 20 times and get a head each time. Can they decide that the coin is
 fair. Immeadiately it is clear that they can't say that it is
-impossible that a fair coin would turn up heads five times; it is just pretty unlikely. They could say that there is only a one in 
+impossible that a fair coin would turn up heads five times; it is just
+pretty unlikely. They could say that there is only a one in
 \begin{equation}
 2^{5}=32
 \end{equation}
@@ -52,6 +53,27 @@ this course it to learn how to calculate probabilities, the
 probability of five heads is an easy example of this, and how to make
 inferences, such as deciding the chance the coin is unfair.
 
+
+%% change to 1 9 90 900 etc
+It is very easy to confuse yourself with probability; here is a
+confusing problem. An evil genius has decided to tattoo their names on
+some peoples foreheads and in the usual over-elaborate evil genius
+manner they do it according to a diabolic game. A person is selected
+and forced into the tattoo parlour, the evil genius rolls two die and
+if they show two sixes, they tatoo the person and the game ends,
+otherwise the lucky person is released and the evil genius selects two
+new people. Again, the evil genius rolls the die, again, if gives two
+sixes then they tattoo everyone and the game ends, if not, they let
+both leave and select four people and roll the die. The process
+repeats, doubling the number each time, until the dice comes up with
+two sixes, the people in the parlour are tattooed and the game ends. If you are
+forced into the parlous, what is the chance you'll end up with a tattoo
+on your forehead. Is it the relatively modest one in 36, or, given
+that a majority of people who enter the room end up tatooed, is it
+nearer one in two?
+
+To avoid getting confused we need some notation and some mathematical
+machinery and that's what we are going to do first.
 
 \section*{1: Probability}
 
