--- a/1_probability/source/1_probability.tex
+++ b/1_probability/source/1_probability.tex
@@ -222,7 +222,7 @@ for summing but for products. The probability graph can be seen in Fig.~\ref{fig
 \begin{center}
 \include{birthday}
 \end{center}
-\caption{The probability of at least two people having the same birthday in a group of people, plotted against the size of the group.\label{fig_birthday}}
+\caption{The probability of at least two people having the same birthday in a group of people, plotted against the size of the group. The code for making this graph is \texttt{birthday.jl}\label{fig_birthday}}
 \end{figure}
 
 When we were defining the binomial coefficient, we used the factorial
