--- a/1_probability/source/1_probability.tex
+++ b/1_probability/source/1_probability.tex
@@ -79,7 +79,7 @@ know what you are trying to calculate. To avoid getting confused we
 need some notation and some mathematical machinery and that's what we
 are going to do now.
 
-\section*{1: Probability}
+\section*{Probability}
 
 To start with we need to terminology and notation and this begins with
 a \textbf{sample space} $X$, this is the set of points; the idea is
@@ -142,7 +142,7 @@ getting one or two on a dice is a third, the probability of getting a
 three is a sixth; putting these together, the probablity of getting a
 one, two or three is a half.
 
-\section{Counting things}
+\section*{Counting things}
 
 The is a class of problems where calculating probabilities can be
 reduced to counting things; this basically works using the rule above
