--- a/1_probability/source/1_probability.tex
+++ b/1_probability/source/1_probability.tex
@@ -42,7 +42,7 @@ pretty unlikely. They could say that there is only a one in
 chance that a fair coin would produce that result. Since
 $(1-1/32)*100\approx 97$ it would seem that gambler could be $97\%$
 certain the coin was unfair. This isn't the end of the story though:
-five harps would have been equally suprising; so perhaps the thing to
+five harps would have been equally surprising; so perhaps the thing to
 say is that there is only a one in
 \begin{equation}
 2^{4}=16
