--- a/1_probability/source/1_probability.tex
+++ b/1_probability/source/1_probability.tex
@@ -152,6 +152,15 @@ this rule means that the probability of an event is is
 \begin{equation}
 p(A)=(\mbox{number of points in }A)\times q
 \end{equation}
+To see this notice that if $A=\{a_1,a_2,\ldots,a_k\}$ are the points in $A$ we can write $A$ as the union of little sets each containing just one point:
+\begin{equation}
+A=\{a_1\}\cup\{a_2\}\cup\ldots\cup\{a_k\}
+\end{equation}
+and so
+\begin{equation}
+p(A)=p(\{a_1\})+p(\{a_2\})+\ldots+p(\{a_k\})=q+q+\ldots+qx
+\end{equation}
+
 From the rule $P(X)=1$ it also follows that 
 \begin{equation}
 q=1/(\mbox{total number of points in the sample space})
