--- a/1_probability/source/1_probability.tex
+++ b/1_probability/source/1_probability.tex
@@ -201,7 +201,7 @@ is dealt five card. A pair is the hand where two cards are the
 same and all the rest of different. What is the probability of getting a pair. The total number
 of different hands in poker is 52 choose five:
 \begin{equation}
-\left(\begin{array}{c}52\\5\end{array}\right)=\frac{52\times 51\times 50\times 49\time 48}{1\times 2 \times 3 \times 4\times 5}=2598960
+\left(\begin{array}{c}52\\5\end{array}\right)=\frac{52\times 51\times 50\times 49\times 48}{1\times 2 \times 3 \times 4\times 5}=2598960
 \end{equation}
 where the binomial coefficient
 \begin{equation}
