--- a/4_random_variables/source/4_random_variables.tex
+++ b/4_random_variables/source/4_random_variables.tex
@@ -146,7 +146,7 @@ noted above, numerical values support arithmetic. This allows us to
 define the expectation value. If $g(x)$ is a function we define the
 \textsl{expected value} of $g(X)$ as
 \begin{equation}
-\langle g(X)\rangle = sum_x p(x)g(x)
+\langle g(X)\rangle = \sum_x p(x)g(x)
 \end{equation}
 where the sum is over all values $x$ with non-zero probability. The
 angle brackets $\langle \ldots \rangle$ are a common notation for
@@ -159,7 +159,7 @@ E[g(X)]=\langle g(X)\rangle
 
 The most obvious expected value is the \textsl{expected value} of $X$:
 \begin{equation}
-\langle X \rangle =  sum_x x p(x)
+\langle X \rangle =  \sum_x x p(x)
 \end{equation}
 Clearly, if the $p(x)$ represent the frequencies, this is the average
 or \textsl{mean} value taken by $X$; it is often called $\mu$. We are
