added commentrary on cartoon, also typos

--- a/problem_sheets/ps1/source/ps1.solns.tex
+++ b/problem_sheets/ps1/source/ps1.solns.tex
@@ -70,7 +70,7 @@ P(K|C)=\frac{0.8}{0.85}=0.94
 \end{equation}
 
 \item In the xkcd cartoon above, what is the chance the Bayesian will
-  when his or her bet if the chance the sun has exploded is one in a
+  win his or her bet if the chance the sun has exploded is one in a
   million? In reality the chance is, of course, much less than one in
   a million! Show the answer to six decimal places.\\ \\ \\ \textbf{Solution}: Let $N$ be the event that the sun has exploded
   and $L$ be the event the machine says that the sun has
@@ -79,7 +79,6 @@ P(K|C)=\frac{0.8}{0.85}=0.94
 \begin{equation}
 P(\bar{N}|L)=\frac{P(L|\bar{N})P(\bar{N})}{P(L)}=\frac{1/36\times (1-10^{-6})}{1/36\times (1-10^{-6})+35/36\times 10^{-6}}=0.999965
 \end{equation}
-
 
 \item A three-sided dice is rolled three times. $X$ is the sum of the
   largest two values. Write down the probability distribution for
