--- a/problem_sheets/ps1/source/ps1.tex
+++ b/problem_sheets/ps1/source/ps1.tex
@@ -27,7 +27,51 @@
 \end{center}
 
 This is an xkcd cartoon that someone posted to the unit reddit, it is
-\texttt{https://xkcd.com/1132/}.
+\texttt{https://xkcd.com/1132/}. It is also worth reading Randall Monroe's comment on the response to this cartoon:
+
+\begin{quote}
+Hey! I was kinda blindsided by the response to this comic.
+
+I’m in the middle of reading a series of books about forecasting
+errors (including Nate Silver’s book, which I really enjoyed), and
+again and again kept hitting examples of mistakes caused by blind
+application of the textbook confidence interval approach.
+
+Someone asked me to explain it in simple terms, but I realized that in
+the common examples used to illustrate this sort of error, like the
+cancer screening/drug test false positive ones, the correct result is
+surprising or unintuitive. So I came up with the sun-explosion
+example, to illustrate a case where naïve application of that
+significance test can give a result that’s obviously nonsense.
+
+I seem to have stepped on a hornet’s nest, though, by adding
+“Frequentist” and “Bayesian” titles to the panels. This came as a
+surprise to me, in part because I actually added them as an
+afterthought, along with the final punchline. (I originally had the
+guy on the right making some other cross-panel comment, but I thought
+the “bet” thing was cuter.)
+
+The truth is, I genuinely didn’t realize Frequentists and Bayesians
+were actual camps of people—all of whom are now emailing me. I thought
+they were loosely-applied labels—perhaps just labels appropriated by
+the books I had happened to read recently—for the standard textbook
+approach we learned in science class versus an approach which more
+carefully incorporates the ideas of prior probabilities.
+
+I meant this as a jab at the kind of shoddy misapplications of
+statistics I keep running into in things like cancer screening (which
+is an emotionally wrenching subject full of poorly-applied
+probability) and political forecasting. I wasn’t intending to
+characterize the merits of the two sides of what turns out to be a
+much more involved and ongoing academic debate than I realized.
+
+A sincere thank you for the gentle corrections; I’ve taken them to
+heart, and you can be confident I will avoid such mischaracterizations
+in the future!
+
+At least, 95.45\% confident.
+\end{quote}
+Thanks again to the person who posted this.
 
 \subsection*{Useful facts}
 
@@ -66,11 +110,12 @@ Four questions, each worth two marks with two marks for attendance.
 
 
 
-\item In the poker hand two pair there are two pairs of cards with
-  each card in the pair matched by value; the fifth card is a
-  different value. What is the probability of two pairs when five
-  cards are drawn randomly. In a full house there is one pair and one
-  triple, what is the probability of getting a full house?
+\item In the poker hand \textsl{two pair} there are two pairs of cards
+  with each card in the pair matched by value; the fifth card has a
+  different value to either pair. What is the probability of two pairs
+  when five cards are drawn randomly. In a \textsl{full house} there is one
+  pair and one triple, what is the probability of getting a full
+  house?
 
 \item A student answers a multiple choice question with four options,
   one of which is correct. 80\% of students know the answer, 20\% of
@@ -78,7 +123,7 @@ Four questions, each worth two marks with two marks for attendance.
   correct what is the chance they knew the answer.
 
 \item In the xkcd cartoon above, what is the chance the Bayesian will
-  when his or her bet if the chance the sun has exploded is one in a
+  win his or her bet if the chance the sun has exploded is one in a
   million? In reality the chance is, of course, much less than one in
   a million! Show the answer to six decimal places.
 
